wellesleynet/roles/k8s/files/freshrss.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: freshrss
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  serviceName: "freshrss"
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
      - image: freshrss/freshrss:1.18.0-alpine
        imagePullPolicy: Always
        name: freshrss
        ports:
        - containerPort: 80
        volumeMounts:
        - name: freshrss
          mountPath: /var/www/FreshRSS/data
        livenessProbe:
          exec:
            command:
            - ls
            - /var/www/FreshRSS/data/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: freshrss
        persistentVolumeClaim:
          claimName: freshrss
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: freshrss
spec:
  selector:
    app: freshrss
  ports:
  - name: freshrss
    port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://authelia.kiski.co/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://authelia.kiski.co"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: freshrss.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: freshrss
            port:
              number: 80
  tls:
  - hosts:
    - freshrss.kiski.co
    secretName: freshrss-kiski-co-tls
